[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaantamil"
version = "0.1.0"
authors = [
  { name="Priya Saravanan", email="writemailtovaantamil@gmail.com" },
]
description = "Tamil Ilakkana Aayvi"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://vaantamil.com"
Source = "https://github.com/vaantamil/vaantamil"