[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaantamil"
version = "0.1.2"
authors = [
  { name="Priya Saravanan", email="writemailtovaantamil@gmail.com" },
]
description = "Tamil Morphological Analyzer and Grammar Engine"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://vaantamil.com"
Source = "https://github.com/vaantamil/vaantamil"